ipcMain capture screen

--- a/app/src/index.html
+++ b/app/src/index.html
@@ -21,10 +21,27 @@
     <input placeholder="message">
     <button>Send</button>
 
-
-
     <div id="messages"></div>
-    <script src="renderer.js"></script>
+
+
+
+    <br>
+    <br>
+    <br>
+    <br>
+
+
+    <video src=""></video>
+
+    <button id="startBtn">Start</button>
+    <button id="stopBtn">Stop</button>
+
+    <hr>
+
+    <button id="videoSelectBtn">choose a video source</button>
+
+    <script defer src="renderer.js"></script>
+
 </body>
 
 </html>
